--- a/ElevateLabs-Task 4-Classification with Logistic Regression.ipynb
+++ b/ElevateLabs-Task 4-Classification with Logistic Regression.ipynb
@@ -30,7 +30,7 @@
    "outputs": [],
    "source": [
     "# Load the dataset\n",
-    "df = pd.read_csv(\"data.csv\")  # Make sure to download from Kaggle and rename if needed"
+    "df = pd.read_csv(\"data.csv\")  "
    ]
   },
   {
